# fair-sampler

./: .gitignore  LICENSE  README.md  __init__.py  batch_sampler.py  controller.py  iw.py  pyproject.toml  test_controller.py  train_mnist.py
gfs/: __init__.py  controller.py  dataset.py  iw.py  sampler.py
tests/: conftest.py  test_controller.py  test_dataset.py  test_sampler.py  test_weights.py
