[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-sampler"
version = "0.1.0"
description = "Feedback-controlled sampling for balanced training"
authors = [{name = "Geon Lee"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch>=2.0.0","torchvision>=0.15.0","numpy>=1.22"]

[tool.setuptools.packages.find]
where = ["src"]