[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gfs"
version = "0.1.0"
description = "Feedback-controlled fair sampler for long-tail training"
authors = [{name = "Geon Lee"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch>=2.0.0", "torchvision>=0.15.0", "numpy>=1.22"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gfs*"]
